# introcs

./: Directory.Build.targets  Introcs.csproj  README.rst
_templates/mustache/: render_mustache.groovy  render_mustache.py  render_mustache.rb  usage.txt
_templates/mustache/skeleton-cs/{{name}}/choices/build_tool/meson/: meson.build.mustache  meson_options.txt  packages.config  {{parentcap}}.{{projectcap}}.nuspec.mustache
api/: Doxyfile_cs.txt  Introcs.Practice.csproj  Introcs.Practice.nuspec  Introcs.Practice.nuspec.bak  README.rst  packages.config  packages.config.bak
api/resources/: covfilter.txt
api/src/: Introcs.Practice.pc.in  introcs.practice.pc.in
api/tests/: Introcs.Practice.Tests.csproj
app/: Doxyfile_cs.txt  Introcs.Intro.csproj  Introcs.Intro.nuspec  Introcs.Intro.nuspec.bak  Makefile-auxffi.mk  README.rst  packages.config  packages.config.bak
app/resources/: covfilter.txt
app/src/: Introcs.Intro.pc.in  introcs.intro.pc.in
app/src/cs/introcs/intro/: App.cs  (+3 more)
app/tests/: Introcs.Intro.Tests.csproj
common/: Doxyfile_cs.txt  Introcs.Util.csproj  Introcs.Util.nuspec  Introcs.Util.nuspec.bak  Makefile-auxffi.mk  README.rst  packages.config  packages.config.bak
common/resources/: covfilter.txt
common/src/: Introcs.Util.pc.in  introcs.util.pc.in
common/tests/: Introcs.Util.Tests.csproj
foreignc/: Doxyfile_cs.txt  Introcs.Foreignc.csproj  Introcs.Foreignc.nuspec  Introcs.Foreignc.nuspec.bak  Makefile-auxffi.mk  README.rst  packages.config.bak
foreignc/resources/: covfilter.txt
foreignc/src/: Introcs.Foreignc.pc.in  introcs.foreignc.pc.in
(+104 files in other folders)
